maze.lessons.maze.island.IslandMaze.scala.error
Escaper:5: error: too many arguments for method getDirection: ()plm.universe.Direction
      getDirection(Direction.NORTH)
                  ^Escaper:8: error: not found: value KeepHandOnSiseWall
      KeepHandOnSiseWall()
      ^